pallets/phala/src/phat_tokenomic/snapshots/phala_pallets__phat_tokenomic__tests__can_restake_without_any_changes-2.snap
---
source: pallets/phala/src/phat_tokenomic/tests.rs
assertion_line: 98
expression: events
---
[
    RuntimeEvent::PhatTokenomic(
        Event::ContractDepositChanged {
            cluster: None,
            contract: 0x2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a,
            deposit: 1000000000000,
        },
    ),
    RuntimeEvent::PhatTokenomic(
        Event::UserStakeChanged {
            cluster: None,
            account: 0101010101010101010101010101010101010101010101010101010101010101 (5C62Ck4U...),
            contract: 0x2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a,
            stake: 1000000000000,
        },
    ),
]
